WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75817
REGRESSION(
r104327
?): media/track/track-cues-cuechange.html and track-cues-enter-exit.html intermittently time out, media/track/track-cues-seeking and fails
https://bugs.webkit.org/show_bug.cgi?id=75817
Summary
REGRESSION(r104327?): media/track/track-cues-cuechange.html and track-cues-en...
Ryosuke Niwa
Reported
2012-01-08 18:21:19 PST
It seems like
http://trac.webkit.org/changeset/104327/
made the following two tests much more flaky than they used to be: media/track/track-cues-cuechange.html media/track/track-cues-enter-exit.html
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=media%2Ftrack%2Ftrack-cues-cuechange.html%2Cmedia%2Ftrack%2Ftrack-cues-enter-exit.html
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2012-01-08 20:28:34 PST
Added Chromium test expectations in
http://trac.webkit.org/changeset/104426
.
John Knottenbelt
Comment 2
2012-01-09 04:39:09 PST
http://trac.webkit.org/changeset/104327/
also seems to have broken media/track/track-cues-seeking.html . I have asked on the bug
https://bugs.webkit.org/show_bug.cgi?id=72555
whether the test needs to be updated (perhaps to wait for all the cues to be added) or whether the patch itself might have a bug. While we're waiting for an answer I'll add this one to test expectations as well.
John Knottenbelt
Comment 3
2012-01-09 07:27:01 PST
media/track/track-webvtt-tc026-voice.html is also hitting an assert in chromium debug mac: ASSERTION FAILED: m_ignoreTrackDisplayUpdate ../html/HTMLMediaElement.h(406) : void WebCore::HTMLMediaElement::endIgnoringTrackDisplayUpdateRequests() 1 0x5343b7a5 WebCore::HTMLMediaElement::endIgnoringTrackDisplayUpdateRequests() 2 0x534304fd WebCore::HTMLMediaElement::textTrackAddCues(WebCore::TextTrack*, WebCore::TextTrackCueList const*) 3 0x5348f807 WebCore::HTMLTrackElement::textTrackAddCues(WebCore::TextTrack*, WebCore::TextTrackCueList const*) 4 0x5348f866 non-virtual thunk to WebCore::HTMLTrackElement::textTrackAddCues(WebCore::TextTrack*, WebCore::TextTrackCueList const*) 5 0x534a7141 WebCore::LoadableTextTrack::newCuesAvailable(WebCore::TextTrackLoader*) 6 0x534a7199 non-virtual thunk to WebCore::LoadableTextTrack::newCuesAvailable(WebCore::TextTrackLoader*) 7 0x53f6a95d WebCore::TextTrackLoader::cueLoadTimerFired(WebCore::Timer<WebCore::TextTrackLoader>*) 8 0x53f6c577 WebCore::Timer<WebCore::TextTrackLoader>::fired() 9 0x535f61ee WebCore::ThreadTimers::sharedTimerFiredInternal() 10 0x535f5f7f WebCore::ThreadTimers::sharedTimerFired() 11 0x5500e919 webkit_glue::WebKitPlatformSupportImpl::DoTimeout() 12 0x5500f467 base::BaseTimer<webkit_glue::WebKitPlatformSupportImpl, false>::TimerTask::Run() 13 0x51dbe104 base::internal::RunnableAdapter<void (base::BaseTimer_Helper::TimerTask::*)()>::Run(base::BaseTimer_Helper::TimerTask*) 14 0x51dbe003 base::internal::InvokeHelper<false, void, base::internal::RunnableAdapter<void (base::BaseTimer_Helper::TimerTask::*)()>, void ()(base::BaseTimer_Helper::TimerTask*)>::MakeItSo(base::internal::RunnableAdapter<void (base::BaseTimer_Helper::TimerTask::*)()>, base::BaseTimer_Helper::TimerTask*) 15 0x51dbdf3e base::internal::Invoker<1, base::internal::BindState<base::internal::RunnableAdapter<void (base::BaseTimer_Helper::TimerTask::*)()>, void ()(base::BaseTimer_Helper::TimerTask*), void ()(base::internal::OwnedWrapper<base::BaseTimer_Helper::TimerTask>)>, void ()(base::BaseTimer_Helper::TimerTask*)>::Run(base::internal::BindStateBase*) 16 0x51d1a0bb base::Callback<void ()()>::Run() const 17 0x51d179b5 MessageLoop::RunTask(base::PendingTask const&) 18 0x51d17bc1 MessageLoop::DeferOrRunPendingTask(base::PendingTask const&) 19 0x51d17df8 MessageLoop::DoWork() 20 0x51c985bb base::MessagePumpCFRunLoopBase::RunWork() 21 0x51c97cb2 base::MessagePumpCFRunLoopBase::RunWorkSource(void*) 22 0x9739242b __CFRunLoopDoSources0 23 0x9738feef __CFRunLoopRun 24 0x9738f3c4 CFRunLoopRunSpecific 25 0x9738f1f1 CFRunLoopRunInMode 26 0x96b5ee04 RunCurrentEventLoopInMode 27 0x96b5ebb9 ReceiveNextEventCommon 28 0x96b5ea3e BlockUntilNextEventMatchingListInMode 29 0x9345f595 _DPSNextEvent 30 0x9345edd6 -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] 31 0x934211f3 -[NSApplication run]
http://build.chromium.org/p/chromium.webkit/builders/Webkit%20Mac10.6%20(dbg)/builds/7141/steps/webkit_tests/logs/stdio
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&tests=media%2Ftrack%2Ftrack-webvtt-tc026-voice.html
Radar WebKit Bug Importer
Comment 4
2012-01-09 12:16:23 PST
<
rdar://problem/10664198
>
Eric Carlson
Comment 5
2012-01-09 12:16:53 PST
m_ignoreTrackDisplayUpdate isn't being initialized :-(
Eric Carlson
Comment 6
2012-01-09 12:55:34 PST
http://trac.webkit.org/changeset/104479
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug