Source/WebCore: REGRESSION(r104327?): media/track/track-cues-cuechange.html and track-cues-enter-exit.html intermittently time out, media/track/track-cues-seeking and  fails https://bugs.webkit.org/show_bug.cgi?id=75817

Unreviewed, fix a problem introduced in r104327.

No new tests, covered by existing tests.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::HTMLMediaElement): Initialize m_ignoreTrackDisplayUpdate.

LayoutTests: REGRESSION(r104327?): media/track/track-cues-cuechange.html and track-cues-enter-exit.html intermittently time out, media/track/track-cues-seeking and  fails
https://bugs.webkit.org/show_bug.cgi?id=75817

Unreviewed, fix a problem introduced in r104327.

Re-enable <track> tests disabled after r104327.

* platform/chromium/test_expectations.txt:


Canonical link: https://commits.webkit.org/92677@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104479 268f45cc-cd09-0410-ab3c-d52691b4dbfc